tests/sksl/errors/golden/ArrayReturnTypes.glsl
### Compilation failed:

error: 1: functions may not return type 'half[2][4]'
error: 2: functions may not return type 'int[1]'
2 errors
